# cam_localization

./: CMakeLists.txt  README.md  package.xml
calibration/: cam.yml  camera_calib  camera_graph 4_4_19.yml  camera_graph.yml  default.xml  out_camera_data.xml
calibration/calib_pics/: input_images.xml  input_images.xml~
launch/: 6_camera_startup.launch  all_cameras.launch  calibrate.launch
launch/testing/: 2_cam.launch  cam_merge_test.launch
src/: CameraGraph.cpp  CameraGraph.hpp  CameraGraphCalibrator.cpp  CameraGraphCalibrator.hpp  calibrate.cpp  localization.cpp  localization_2cams.cpp
src/testing/: camera_merge_test.cpp
